# dapp

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: daily-draw.yml
jomo-near-lotto-front/: index.html  package-lock.json  package.json  tsconfig.json
jomo-near-lotto-front/src/: App.tsx  main.tsx
jomo-near-lotto-front/src/components/: footer.tsx
jomo-near-lotto-front/src/pages/: about.tsx  home.tsx  how_it_works.tsx  translations.ts
jomo-near-lotto-front/src/styles/: globals.css
near-lotto/: Cargo.toml
near-lotto/src/: lib.rs
