[package]
name = "near-lotto"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.2.1"
serde_json = "1.0.149"

[dev-dependencies]
near-sdk = { version = "=5.2.1", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"     # Максимально стиснути розмір файлу
lto = true          # Увімкнути оптимізацію під час лінкування
debug = false       # Видалити всі налагоджувальні символи
panic = "abort"     # Вимкнути складні сліди помилок (щоб NEAR не плутався)
overflow-checks = true
